# aoc-dashboard

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Justfile  draw.py  pyproject.toml
aoc_dashboard/: __init__.py  api.py
static/: style.css
templates/: standings.html
webapp/: package.json
webapp/public/: index.html
webapp/src/: config.json  index.css  index.js
