[tool.poetry]
name = "aoc-dashboard"
version = "0.1.0"
description = ""
authors = ["Mathieu Lemay <acidrain1@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.101.1"
uvicorn = "^0.23.2"
requests = "^2.26.0"
Jinja2 = "^3.0.3"
pytz = "^2023.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
